Fix too wide SSH Keys table by clipping the server host keys
The server public keys are supposed to truncate to the window width.
Under Firefox 3, they apparently render the entire length of the page.
Setting the width of the panel to 80em limits them to a much more
reasonable display width, making the window lay out nicer.

Bug: GERRIT-122

--- a/src/main/java/com/google/gerrit/client/GerritCss.css
+++ b/src/main/java/com/google/gerrit/client/GerritCss.css
@@ -722,6 +722,7 @@
   font-family: monospace;
   font-size: small;
   overflow: hidden;
+  width: 80em;
 }
 .gerrit-SshHostKeyPanel-KnownHostEntry .gwtexpui-Clippy-Control {
   display: block;
